--- a/upload.html
+++ b/upload.html
@@ -2,18 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Upload Track - SikkMixx</title>
+  <title>MP3 Upload</title>
 </head>
 <body>
-  <h2>Upload Your MP3</h2>
-
-  <form action="/upload" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" accept=".mp3" required />
-    <br><br>
-    <button type="submit">Upload Track</button>
+  <h2>Upload MP3</h2>
+  <form action="https://sikkmixx.com/upload" method="POST" enctype="multipart/form-data">
+    <input type="file" name="file" accept=".mp3" />
+    <button type="submit">Upload MP3</button>
   </form>
-
-  <br>
-  <a href="/">Back to Home</a>
 </body>
 </html>
