--- a/upload.html
+++ b/upload.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>MP3 Upload</title>
-</head>
-<body>
-  <h2>Upload MP3</h2>
-  <form action="https://sikkmixx.com/upload" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" accept=".mp3" />
-    <button type="submit">Upload MP3</button>
+<body style="background:black;color:white;font-family:Arial;">
+  <h2>Upload to SikkMixx</h2>
+
+  <form id="uploadForm">
+    <input type="file" name="file" required />
+    <button type="submit">Upload</button>
   </form>
+
+  <p id="result"></p>
+
+  <script>
+    const form = document.getElementById("uploadForm");
+    const result = document.getElementById("result");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const formData = new FormData(form);
+
+      const response = await fetch("https://sikkmixx.com/upload", {
+        method: "POST",
+        body: formData,
+      });
+
+      const data = await response.json();
+      result.innerHTML = `<a href="${data.url}" target="_blank">View Upload</a>`;
+    });
+  </script>
 </body>
 </html>
