--- a/upload.html
+++ b/upload.html
@@ -1,32 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body style="background:black;color:white;font-family:Arial;">
-  <h2>Upload to SikkMixx</h2>
+<head>
+  <meta charset="UTF-8">
+  <title>Upload Track - SikkMixx</title>
+</head>
+<body>
+  <h2>Upload Your MP3</h2>
 
-  <form id="uploadForm">
-    <input type="file" name="file" required />
-    <button type="submit">Upload</button>
+  <form action="/upload" method="POST" enctype="multipart/form-data">
+    <input type="file" name="file" accept=".mp3" required />
+    <br><br>
+    <button type="submit">Upload Track</button>
   </form>
 
-  <p id="result"></p>
-
-  <script>
-    const form = document.getElementById("uploadForm");
-    const result = document.getElementById("result");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const formData = new FormData(form);
-
-      const response = await fetch("https://sikkmixx.com/upload", {
-        method: "POST",
-        body: formData,
-      });
-
-      const data = await response.json();
-      result.innerHTML = `<a href="${data.url}" target="_blank">View Upload</a>`;
-    });
-  </script>
+  <br>
+  <a href="/">Back to Home</a>
 </body>
 </html>
