--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="container">
     <h1>SIKKMIXX</h1>
     <p>Submit your heat. Drop your next anthem.</p>
-    <a class="upload-btn" href="/upload.html">🎧 Upload Your Track</a>
+    <a class="upload-btn" href="/giveit.html">🎧 Upload Your Track</a>
   </div>
 
   <footer>
