--- a/index.html
+++ b/index.html
@@ -1,86 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>SikkMixx</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>SikkMixx</title>
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      color: white;
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #0f0f0f, #1c1c1c);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
-      /* Sexy DJ gradient background */
-      background: linear-gradient(-45deg, #0f0c29, #302b63, #24243e, #ff00cc);
-      background-size: 400% 400%;
-      animation: gradientMove 12s ease infinite;
-    }
+.container {
+    background: #181818;
+    padding: 40px;
+    border-radius: 15px;
+    width: 350px;
+    box-shadow: 0 0 40px rgba(0,0,0,0.7);
+    text-align: center;
+}
 
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+h1 {
+    margin-bottom: 20px;
+    font-size: 28px;
+    letter-spacing: 2px;
+}
 
-    .container {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 50px;
-      border-radius: 20px;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 40px rgba(255, 0, 200, 0.4);
-    }
+input {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+}
 
-    h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-      letter-spacing: 2px;
-    }
+button {
+    width: 100%;
+    padding: 12px;
+    margin-top: 10px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 14px;
+    transition: 0.3s;
+}
 
-    p {
-      font-size: 1.2em;
-      margin-bottom: 30px;
-      opacity: 0.9;
-    }
+.login-btn {
+    background: #ff0055;
+    color: white;
+}
 
-    .upload-btn {
-      display: inline-block;
-      padding: 15px 35px;
-      font-size: 1.2em;
-      font-weight: bold;
-      color: white;
-      text-decoration: none;
-      border-radius: 50px;
-      background: linear-gradient(90deg, #ff00cc, #3333ff);
-      transition: all 0.3s ease;
-      box-shadow: 0 0 20px rgba(255, 0, 200, 0.7);
-    }
+.login-btn:hover {
+    background: #ff3377;
+}
 
-    .upload-btn:hover {
-      transform: scale(1.08);
-      box-shadow: 0 0 35px rgba(255, 0, 200, 1);
-    }
+.upload-btn {
+    background: #00c853;
+    color: white;
+}
 
-    footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.8em;
-      opacity: 0.6;
-    }
-  </style>
+.upload-btn:hover {
+    background: #00e676;
+}
+
+.toggle {
+    margin-top: 15px;
+    font-size: 13px;
+    color: #aaa;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
+
+.success {
+    color: #00e676;
+    margin-top: 10px;
+}
+
+.error {
+    color: #ff5252;
+    margin-top: 10px;
+}
+</style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>SIKKMIXX</h1>
-    <p>Submit your heat. Drop your next anthem.</p>
-    <a class="upload-btn" href="/giveit.html">🎧 Upload Your Track</a>
-  </div>
 
-  <footer>
+<div class="container">
+
+    <h1>SIKKMIXX</h1>
+
+    <!-- LOGIN -->
+    <div id="loginBox">
+        <input type="text" id="loginUsername" placeholder="Username">
+        <input type="password" id="loginPassword" placeholder="Password">
+        <button class="login-btn" onclick="login()">LOGIN</button>
+        <div class="toggle" onclick="showRegister()">Create Account</div>
+        <div id="loginMsg"></div>
+    </div>
+
+    <!-- REGISTER -->
+    <div id="registerBox" class="hidden">
+        <input type="text" id="regUsername" placeholder="Username">
+        <input type="password" id="regPassword" placeholder="Password">
+        <button class="login-btn" onclick="register()">REGISTER</button>
+        <div class="toggle" onclick="showLogin()">Back to Login</div>
