--- a/index.html
+++ b/index.html
@@ -65,4 +65,68 @@ button:hover {
     font-size: 14px;
 }
 
-.success
+.success { color: #00e676; }
+.error { color: #ff5252; }
+
+.footer {
+    margin-top: 25px;
+    font-size: 12px;
+    color: #888;
+}
+</style>
+</head>
+
+<body>
+
+<div class="card">
+    <h1>SIKKMIXX</h1>
+
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+
+    <button onclick="login()">LOGIN</button>
+
+    <div id="msg" class="message"></div>
+
+    <div class="footer">
+        DJ Platform • Upload & Manage Tracks
+    </div>
+</div>
+
+<script>
+
+const API = "https://sikkmixx-api.wakesetter.workers.dev";
+
+async function login() {
+    const username = document.getElementById("username").value;
+    const password = document.getElementById("password").value;
+
+    const msg = document.getElementById("msg");
+    msg.innerHTML = "Logging in...";
+
+    try {
+        const res = await fetch(API + "/login", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ username, password })
+        });
+
+        const text = await res.text();
+        console.log("Server response:", text);
+
+        if (res.ok) {
+            msg.innerHTML = `<span class="success">Login successful</span>`;
+        } else {
+            msg.innerHTML = `<span class="error">${text}</span>`;
+        }
+
+    } catch (err) {
+        console.error(err);
+        msg.innerHTML = `<span class="error">Connection error</span>`;
+    }
+}
+
+</script>
+
+</body>
+</html>
