--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ button:hover {
 
 <script>
 
-const API = "https://sikkmixx-api.wakesetter.workers.dev";
+const API = "https://api.sikkmixx.com";
+
 
 async function login() {
     const username = document.getElementById("username").value;
