--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,124 +7,136 @@
 
 <style>
 body {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: radial-gradient(circle at top, #1a1a1a, #0a0a0a);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #0f0f0f;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .card {
-    background: #141414;
-    padding: 40px;
-    width: 360px;
-    border-radius: 18px;
-    box-shadow: 0 0 60px rgba(0,0,0,0.8);
-    text-align: center;
+  background: #1a1a1a;
+  padding: 40px;
+  width: 380px;
+  border-radius: 15px;
+  box-shadow: 0 0 40px rgba(0,0,0,0.7);
+  text-align: center;
 }
 
 h1 {
-    font-weight: 600;
-    letter-spacing: 3px;
-    margin-bottom: 30px;
-    color: #ff0055;
+  color: #ff0055;
+  letter-spacing: 2px;
 }
 
 input {
-    width: 100%;
-    padding: 14px;
-    margin-bottom: 15px;
-    border-radius: 10px;
-    border: none;
-    background: #222;
-    color: white;
-    font-size: 14px;
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border-radius: 8px;
+  border: none;
+  background: #222;
+  color: white;
 }
 
 button {
-    width: 100%;
-    padding: 14px;
-    border-radius: 10px;
-    border: none;
-    font-weight: bold;
-    background: linear-gradient(90deg, #ff0055, #ff3d7f);
-    color: white;
-    cursor: pointer;
-    transition: 0.3s ease;
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  border-radius: 8px;
+  border: none;
+  background: #ff0055;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 button:hover {
-    opacity: 0.85;
+  opacity: 0.85;
 }
 
-.message {
-    margin-top: 15px;
-    font-size: 14px;
+.hidden {
+  display: none;
 }
 
 .success { color: #00e676; }
 .error { color: #ff5252; }
-
-.footer {
-    margin-top: 25px;
-    font-size: 12px;
-    color: #888;
-}
 </style>
 </head>
-
 <body>
 
 <div class="card">
+
+  <!-- LOGIN VIEW -->
+  <div id="loginView">
     <h1>SIKKMIXX</h1>
-
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
     <button onclick="login()">LOGIN</button>
+    <div id="loginMsg"></div>
+  </div>
 
-    <div id="msg" class="message"></div>
+  <!-- UPLOAD VIEW -->
+  <div id="uploadView" class="hidden">
+    <h1>UPLOAD TRACK</h1>
+    <input type="file" id="fileInput">
+    <button onclick="upload()">Upload</button>
+    <div id="uploadMsg"></div>
+    <button onclick="logout()">Logout</button>
+  </div>
 
-    <div class="footer">
-        DJ Platform • Upload & Manage Tracks
-    </div>
 </div>
 
 <script>
 
 const API = "https://api.sikkmixx.com";
 
-
 async function login() {
-    const username = document.getElementById("username").value;
-    const password = document.getElementById("password").value;
+  const username = document.getElementById("username").value;
+  const password = document.getElementById("password").value;
 
-    const msg = document.getElementById("msg");
-    msg.innerHTML = "Logging in...";
+  const res = await fetch(API + "/login", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ username, password })
+  });
 
-    try {
-        const res = await fetch(API + "/login", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ username, password })
-        });
+  const text = await res.text();
 
-        const text = await res.text();
-        console.log("Server response:", text);
+  if (res.ok) {
+    document.getElementById("loginView").classList.add("hidden");
+    document.getElementById("uploadView").classList.remove("hidden");
+  } else {
+    document.getElementById("loginMsg").innerHTML =
+      `<div class="error">${text}</div>`;
+  }
+}
 
-        if (res.ok) {
-            msg.innerHTML = `<span class="success">Login successful</span>`;
-        } else {
-            msg.innerHTML = `<span class="error">${text}</span>`;
-        }
+function logout() {
+  document.getElementById("uploadView").classList.add("hidden");
+  document.getElementById("loginView").classList.remove("hidden");
+}
 
-    } catch (err) {
-        console.error(err);
-        msg.innerHTML = `<span class="error">Connection error</span>`;
-    }
+async function upload() {
+  const file = document.getElementById("fileInput").files[0];
+  if (!file) return;
+
+  const formData = new FormData();
+  formData.append("file", file);
+
+  const res = await fetch(API + "/upload", {
+    method: "POST",
+    body: formData
+  });
+
+  const text = await res.text();
+
+  document.getElementById("uploadMsg").innerHTML =
+    res.ok
+      ? `<div class="success">${text}</div>`
+      : `<div class="error">${text}</div>`;
 }
 
 </script>
