--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ button:hover {
 <form id="loginForm">
   <input id="username" placeholder="Username" required />
   <input id="password" type="password" placeholder="Password" required />
-  <button type="submit">Login</button>
+  <button type="submit">Login Here</button>
 </form>
 
 <div id="uploadSection" style="display:none;">
