--- a/index.html
+++ b/index.html
@@ -67,10 +67,17 @@ button:hover {
 </head>
 <body>
 
+
+
+
+
+
+
+
 <form id="loginForm">
   <input id="username" placeholder="Username" required />
   <input id="password" type="password" placeholder="Password" required />
-  <button type="submit">Login yo</button>
+  <button type="submit">Login DO</button>
 </form>
 
 <div id="uploadSection" style="display:none;">
@@ -181,7 +188,7 @@ async function loadTracks() {
 
     div.innerHTML = `
       <p>${track.original_name}</p>
-      <audio controls src="${API}/file/${encodeURIComponent(track.filename)}"></audio>
+      <audio controls src="${API}/file/${track.filename}"></audio>
       <button onclick="deleteTrack(${track.id})">Delete</button>
     `
 
@@ -219,13 +226,11 @@ async function loadPublicTracks() {
   container.innerHTML = ""
 
   tracks.forEach(track => {
-container.innerHTML += `
-  <div style="margin-bottom:20px;">
-    <p>${track.original_name}</p>
-    <audio controls src="${API}/file/${track.filename}"></audio>
-  </div>
-`
-
+    container.innerHTML += `
+      <div style="margin-bottom:20px;">
+        <p>${track.original_name}</p>
+        <audio controls src="${API}/file/${track.filename}"></audio>
+      </div>
     `
   })
 }
