--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
 
 <div class="card">
-  <h1>🎧 SIKKMIX LIVE</h1>
+  <h1>🎧 SIKKMIXX LIVE</h1>
   <div class="track-title" id="trackTitle">Loading...</div>
   <audio id="player" controls></audio>
   <div class="footer">Powered by SikkMixx</div>
