--- a/index.html
+++ b/index.html
@@ -8,14 +8,55 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(-45deg, #111, #1a1a1a, #121212, #000);
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
+      background: #000;
       color: white;
+      overflow: hidden;
+    }
+
+    /* CLUB INTRO SCREEN */
+    #intro {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at center, #111 0%, #000 80%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 10;
+      transition: opacity 1s ease;
+    }
+
+    #enterBtn {
+      padding: 20px 50px;
+      font-size: 22px;
+      letter-spacing: 3px;
+      background: transparent;
+      border: 2px solid #ff00cc;
+      color: #ff00cc;
+      cursor: pointer;
+      border-radius: 50px;
+      box-shadow: 0 0 20px #ff00cc;
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0% { box-shadow: 0 0 10px #ff00cc; }
+      50% { box-shadow: 0 0 40px #ff00cc; }
+      100% { box-shadow: 0 0 10px #ff00cc; }
+    }
+
+    /* MAIN PLAYER */
+    #main {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      background: linear-gradient(-45deg, #000, #111, #1a1a1a);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+      opacity: 0;
+      transition: opacity 1s ease;
     }
 
     @keyframes gradient {
@@ -32,67 +73,78 @@
       text-align: center;
       width: 90%;
       max-width: 500px;
-      box-shadow: 0 0 40px rgba(0,0,0,0.5);
+      box-shadow: 0 0 40px rgba(255,0,204,0.3);
     }
 
     h1 {
-      font-size: 28px;
-      letter-spacing: 2px;
+      letter-spacing: 3px;
       margin-bottom: 20px;
-      opacity: 0.8;
     }
 
     .track-title {
-      font-size: 22px;
       margin-bottom: 25px;
-      font-weight: 600;
+      font-size: 20px;
     }
 
     audio {
       width: 100%;
       filter: invert(1);
     }
-
-    .footer {
-      margin-top: 25px;
-      font-size: 12px;
-      opacity: 0.5;
-    }
   </style>
 </head>
 
 <body>
 
-<div class="card">
+<!-- INTRO SCREEN -->
+<div id="intro">
   <h1>🎧 SIKKMIXX LIVE</h1>
-  <div class="track-title" id="trackTitle">Loading...</div>
-  <audio id="player" controls></audio>
-  <div class="footer">Powered by SikkMixx</div>
+  <button id="enterBtn">ENTER THE MIX</button>
+</div>
+
+<!-- MAIN PLAYER -->
+<div id="main">
+  <div class="card">
+    <h1>LIVE SET</h1>
+    <div class="track-title" id="trackTitle">Loading...</div>
+    <audio id="player" controls></audio>
+  </div>
 </div>
 
 <script>
 const API = "https://api.sikkmixx.com"
+let player = document.getElementById("player")
 
-async function loadTracks() {
+async function loadTrack() {
   const res = await fetch(`${API}/tracks`)
   const tracks = await res.json()
 
   if (tracks.length > 0) {
-    const track = tracks[0] // first track = live track
+    const track = tracks[0]
     const encoded = encodeURIComponent(track.filename)
 
     document.getElementById("trackTitle").innerText =
       track.filename.replace(".mp3","")
 
-    document.getElementById("player").src =
-      `${API}/file/${encoded}`
+    player.src = `${API}/file/${encoded}`
   } else {
     document.getElementById("trackTitle").innerText =
       "No live track yet"
   }
 }
 
-loadTracks()
+loadTrack()
+
+// ENTER BUTTON LOGIC
+document.getElementById("enterBtn").addEventListener("click", () => {
+
+  player.play()
+
+  document.getElementById("intro").style.opacity = 0
+  setTimeout(() => {
+    document.getElementById("intro").style.display = "none"
+    document.getElementById("main").style.opacity = 1
+  }, 1000)
+})
 </script>
 
 </body>
