--- a/index.html
+++ b/index.html
@@ -90,6 +90,58 @@
       width: 100%;
       filter: invert(1);
     }
+	
+	
+	
+	.equalizer {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 6px;
+  height: 50px;
+}
+
+.equalizer span {
+  width: 6px;
+  height: 10px;
+  background: #ff00cc;
+  box-shadow: 0 0 10px #ff00cc;
+  animation: bounce 1s infinite ease-in-out;
+}
+
+/* stagger animation timing */
+.equalizer span:nth-child(1) { animation-delay: 0s; }
+.equalizer span:nth-child(2) { animation-delay: .1s; }
+.equalizer span:nth-child(3) { animation-delay: .2s; }
+.equalizer span:nth-child(4) { animation-delay: .3s; }
+.equalizer span:nth-child(5) { animation-delay: .4s; }
+.equalizer span:nth-child(6) { animation-delay: .5s; }
+.equalizer span:nth-child(7) { animation-delay: .6s; }
+.equalizer span:nth-child(8) { animation-delay: .7s; }
+
+@keyframes bounce {
+  0%, 100% { height: 10px; }
+  50% { height: 50px; }
+}
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
   </style>
 </head>
 
@@ -107,6 +159,20 @@
     <h1>LIVE SET</h1>
     <div class="track-title" id="trackTitle">Loading...</div>
     <audio id="player" controls></audio>
+	<div class="equalizer">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+
+	
+	
+	
   </div>
 </div>
 
