--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       transition: opacity 1s ease;
     }
 
+#visualizer {
+  margin-top: 30px;
+  width: 100%;
+  height: 80px;
+}
+
+
+
+
     #enterBtn {
       padding: 20px 50px;
       font-size: 22px;
@@ -160,14 +169,8 @@
     <div class="track-title" id="trackTitle">Loading...</div>
     <audio id="player" controls></audio>
 	<div class="equalizer">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
+<canvas id="visualizer"></canvas>
+
 </div>
 
 	
@@ -201,8 +204,13 @@ async function loadTrack() {
 loadTrack()
 
 // ENTER BUTTON LOGIC
-document.getElementById("enterBtn").addEventListener("click", () => {
+document.getElementById("enterBtn").addEventListener("click", async () => {
 
+  if (!audioContext) {
+    initVisualizer()
+  }
+
+  await audioContext.resume()
   player.play()
 
   document.getElementById("intro").style.opacity = 0
@@ -211,6 +219,70 @@ document.getElementById("enterBtn").addEventListener("click", () => {
     document.getElementById("main").style.opacity = 1
   }, 1000)
 })
+
+
+
+
+const canvas = document.getElementById("visualizer")
+const ctx = canvas.getContext("2d")
+
+canvas.width = canvas.offsetWidth
+canvas.height = canvas.offsetHeight
+
+let audioContext
+let analyser
+let source
+let dataArray
+
+function initVisualizer() {
+
+  audioContext = new (window.AudioContext || window.webkitAudioContext)()
+  analyser = audioContext.createAnalyser()
+  analyser.fftSize = 64
+
+  source = audioContext.createMediaElementSource(player)
+  source.connect(analyser)
+  analyser.connect(audioContext.destination)
+
+  const bufferLength = analyser.frequencyBinCount
+  dataArray = new Uint8Array(bufferLength)
+
+  function draw() {
+    requestAnimationFrame(draw)
+
+    analyser.getByteFrequencyData(dataArray)
+
+    ctx.clearRect(0, 0, canvas.width, canvas.height)
+
+    const barWidth = canvas.width / bufferLength
+
+    for (let i = 0; i < bufferLength; i++) {
+      const barHeight = dataArray[i]
+
+      const x = i * barWidth
+      const y = canvas.height - barHeight / 2
+
+      ctx.fillStyle = "#ff00cc"
+      ctx.shadowBlur = 15
+      ctx.shadowColor = "#ff00cc"
+
+      ctx.fillRect(x, y, barWidth - 2, barHeight / 2)
+    }
+  }
+
+  draw()
+}
+
+
+
+
+
+
+
+
+
+
+
 </script>
 
 </body>
