--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
   <div class="card">
     <h1>LIVE SET</h1>
     <div class="track-title" id="trackTitle">Loading...</div>
-    <audio id="player" controls></audio>
+    <audio id="player" controls crossorigin="anonymous"></audio>
+
 	<div class="equalizer">
 <canvas id="visualizer"></canvas>
 
