--- a/index.html
+++ b/index.html
@@ -193,15 +193,9 @@ async function loadTrack() {
     const encoded = encodeURIComponent(track.filename)
 
     document.getElementById("trackTitle").innerText =
-const cleanName = track.filename
-  .split("-")
-  .slice(1)
-  .join("-")
-  .replace(".mp3", "")
+      track.filename.replace(".mp3","")
 
-document.getElementById("trackTitle").innerText = cleanName
-
-
+    player.src = `${API}/file/${encoded}`
   } else {
     document.getElementById("trackTitle").innerText =
       "No live track yet"
