--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live</title>
+  <title>SikkMixx Livex2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -192,11 +192,24 @@ async function loadTrack() {
     const track = tracks[0]
     const encoded = encodeURIComponent(track.filename)
 
-    document.getElementById("trackTitle").innerText =
+
+const cleanName = track.filename
+  .split("-")
+  .slice(1)
+  .join("-")
+  .replace(".mp3", "")
+  .replace(/-/g, " ")
+
+document.getElementById("trackTitle").innerText = cleanName
+
+
+
       track.filename.replace(".mp3","")
 
     player.src = `${API}/file/${encoded}`
-  } else {
+  }
+
+  else {
     document.getElementById("trackTitle").innerText =
       "No live track yet"
   }
