--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Livex2</title>
+  <title>SikkMixx Live</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -12,6 +12,7 @@
       color: white;
       overflow: hidden;
     }
+<a href="/admin.html" id="adminBtn">Admin</a>
 
     /* CLUB INTRO SCREEN */
     #intro {
