--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
   height: 80px;
 }
 
+#adminBtn {
+  position: fixed;
+  top: 15px;
+  right: 20px;
+  font-size: 14px;
+  text-decoration: none;
+  color: rgba(255,255,255,0.6);
+  border: 1px solid rgba(255,255,255,0.3);
+  padding: 6px 12px;
+  border-radius: 20px;
+  backdrop-filter: blur(6px);
+  transition: all 0.3s ease;
+  z-index: 20;
+}
+
+#adminBtn:hover {
+  color: #ff00cc;
+  border-color: #ff00cc;
+  box-shadow: 0 0 10px #ff00cc;
+}
 
 
 
