--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live</title>
+  <title>SikkMixx Livex3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -12,7 +12,7 @@
       color: white;
       overflow: hidden;
     }
-<a href="/admin.html" id="adminBtn">Admin</a>
+
 
     /* CLUB INTRO SCREEN */
     #intro {
@@ -176,6 +176,9 @@
 </head>
 
 <body>
+
+<a href="/admin.html" id="adminBtn">Admin</a>
+
 
 <!-- INTRO SCREEN -->
 <div id="intro">
