--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Livex5</title>
+  <title>SikkMixx Livex6</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -56,6 +56,35 @@
   border-color: #ff00cc;
   box-shadow: 0 0 10px #ff00cc;
 }
+
+
+#registerBtn {
+  position: fixed;
+  top: 15px;
+  left: 20px;
+    opacity: 0.5;
+  font-size: 14px;
+  text-decoration: none;
+  color: rgba(255,255,255,0.6);
+  border: 1px solid rgba(255,255,255,0.3);
+  padding: 6px 12px;
+  border-radius: 20px;
+  backdrop-filter: blur(6px);
+  transition: all 0.3s ease;
+  z-index: 20;
+}
+
+#registerBtn:hover {
+  color: #00e0ff;
+    opacity: 1;
+  border-color: #00e0ff;
+  box-shadow: 0 0 10px #00e0ff;
+}
+
+
+
+
+
 
 
 
@@ -163,23 +192,14 @@
 	
 	
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
   </style>
 </head>
 
 <body>
 
+<a href="/register.html" id="registerBtn">Register</a>
 <a href="/admin.html" id="adminBtn">Admin</a>
+
 
 
 <!-- INTRO SCREEN -->
