--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Livex6</title>
+  <title>SikkMixx Livex7</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -83,6 +83,33 @@
 
 
 
+#visual-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: radial-gradient(circle at center, #ff00cc, #000);
+  transition: background 0.2s ease;
+  overflow: hidden;
+}
+
+#visual-bg::before {
+  content: "";
+  position: absolute;
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  background: radial-gradient(circle, rgba(0,255,255,0.2), transparent 60%);
+  animation: rotate 20s linear infinite;
+}
+
+@keyframes rotate {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
 
 
 
@@ -200,6 +227,7 @@
 <a href="/register.html" id="registerBtn">Register</a>
 <a href="/admin.html" id="adminBtn">Admin</a>
 
+<div id="visual-bg"></div>
 
 
 <!-- INTRO SCREEN -->
@@ -347,24 +375,9 @@ for (let i = 0; i < bars; i++) {
 
   ctx.fillRect(x, y, barWidth - 3, scaled)
 }
-
   }
-
-  draw(
-  
-  
-  )
+  draw( )
 }
-
-
-
-
-
-
-
-
-
-
 
 
 </script>
