--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Livex11</title>
+  <title>SikkMixx Livexx2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -361,7 +361,8 @@ let bassNormalized = bass / 255
 const bg = document.getElementById("visual-bg")
 
 let hueShift = 280 - (bassNormalized * 180)
-let brightness = 10 + (bassNormalized * 40)
+let brightness = 5 + (bassNormalized * 70)
+
 
 bg.style.background = `
   radial-gradient(circle at center,
