--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Livexx2</title>
+  <title>SikkMixx Livezx12</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -90,7 +90,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: radial-gradient(circle at center, #ff00cc, #000);
+  background: radial-gradient(circle at center, #fff0cc, #000);
   transition: background 0.2s ease;
   overflow: hidden;
 }
